RESOLVED FIXED304893
Fix markerUnits=strokeWidth combined with non-scaling-stroke
https://bugs.webkit.org/show_bug.cgi?id=304893
Summary Fix markerUnits=strokeWidth combined with non-scaling-stroke
Attachments
Ahmad Saleem
Comment 1 2026-01-03 15:05:40 PST
EWS
Comment 2 2026-01-03 18:49:38 PST
Committed 305077@main (adac9d93d7a9): <https://commits.webkit.org/305077@main> Reviewed commits have been landed. Closing PR #56047 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-01-03 18:50:11 PST
Note You need to log in before you can comment on or make changes to this bug.