Source/WebCore/rendering/svg/RenderSVGShape.h
@@ -111,6 +111,7 @@ protected:
     virtual bool shapeDependentStrokeContains(const FloatPoint&, PointCoordinateSpace = GlobalCoordinateSpace);
     virtual bool shapeDependentFillContains(const FloatPoint&, const WindRule) const;
     float strokeWidth() const;
+    float strokeWidthForMarkerUnits() const;
 
     inline bool hasNonScalingStroke() const;
     Path* nonScalingStrokePath(const Path*, const AffineTransform&) const;
