Source/WebCore/rendering/svg/legacy/LegacyRenderSVGShape.cpp
@@ -465,6 +465,23 @@ float LegacyRenderSVGShape::strokeWidth() const
     return std::isnan(strokeWidth) ? 0 : strokeWidth;
 }
 
+float LegacyRenderSVGShape::strokeWidthForMarkerUnits() const
+{
+    float strokeWidth = LegacyRenderSVGShape::strokeWidth();
+    if (hasNonScalingStroke()) {
+        auto nonScalingTransform = nonScalingStrokeTransform();
+        if (!nonScalingTransform.isInvertible())
+            return 0.f;
+
+        double xScale = nonScalingTransform.xScale();
+        double yScale = nonScalingTransform.yScale();
+        float scaleFactor = clampTo<float>(std::sqrt((xScale * xScale + yScale * yScale) / 2));
+
+        strokeWidth /= scaleFactor;
+    }
+    return strokeWidth;
+}
+
 Path& LegacyRenderSVGShape::ensurePath()
 {
     if (!hasPath())
